Fixed issue #20 Collapse the pills on teh careers page ona  mobile device.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,22 @@ a {
     background-color: #4d1717;
 }
 
+#career_nav a {
+    color:#dfd4c3;
+    background-color: #4d1717;
+}
+
+#career_nav a:active {
+    color:#dfd4c3;
+    background-color: #4d1717;
+}
+
+#career_nav a:hover {
+    color: #4d1717;
+    text-decoration: none;
+    background-color: #9c8968;
+}
+
 #navbar a:hover {
     color: #4d1717;
     text-decoration: none;
